# Kotlin_NDK

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ndksample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Calculator.cpp  Calculator.h  native-lib.cpp
app/src/main/java/com/example/ndksample/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/ndksample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
ndklib/: build.gradle
ndklib/src/androidTest/java/com/example/ndklib/: ExampleInstrumentedTest.kt
ndklib/src/test/java/com/example/ndklib/: ExampleUnitTest.kt
